--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="send_data">Send my data!</string>
     <string name="request_data">Request Data!</string>
+    <string name="Scouted_By_Default_Text">Your name</string>
 </resources>
