--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="send_data">Send my data!</string>
     <string name="request_data">Request Data!</string>
     <string name="Scouted_By_Default_Text">Your name</string>
+    <string name="wait">Please Wait...</string>
+    <string name="title_activity_send_data">SendData</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
