Add "What's This?" Buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
 
     <!--Strings for DataActivity-->
     <string name="Data_Collection_Title">Data Entry</string>
+    <string name="Help">What\'s This?</string>
     <string name="teamNumberTXT">Team Number</string>
     <string name="matchNumberTXT">Match Number</string>
 </resources>
