--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,12 +23,14 @@
     <string name="matchNumberTXT">Match #</string>
     <string name="submit">Submit Data</string>
     <string name="scouterTXT">Scouted by:</string>
+    <string name="regionalOffText">Duluth</string>
+    <string name="regionalOnText">Milwaukee</string>
 
     <!--Strings for BluetoothActivity-->
     <string name="wait">Please Wait...</string>
     <string name="bluetoothSuccess">You did the thing! Thank you for helping with data collection!</string>
     <string name="bluetoothFail">There was a problem sending your data... It\'s probably our fault, but please check your Bluetooth connection and try again!</string>
-    <string name="title_activity_sucsess">Sucsess</string>
+    <string name="title_activity_success">Success</string>
 
     <string name="dummy_content">Yummy\nCONTENT</string>
 
