Added (nearly) full functionality of the taxi field
NOTE: This commit does not write the taxi field to file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="scouterTXT">Scouted by:</string>
     <string name="regionalOffText">Duluth</string>
     <string name="regionalOnText">Milwaukee</string>
+    <string name="taxiOnText">Robot did taxi</string>
+    <string name="taxiOffText">Robot did not taxi</string>
 
     <!--Strings for BluetoothActivity-->
     <string name="wait">Please Wait...</string>
