--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,14 +27,8 @@
     <string name="regionalOnText">Milwaukee</string>
     <string name="taxiOnText">Robot did taxi</string>
     <string name="taxiOffText">Robot did not taxi</string>
+    <string name="scoreTXT">Score #</string>
 
-    <!--Strings for BluetoothActivity-->
-    <string name="wait">Please Wait...</string>
-    <string name="bluetoothSuccess">You did the thing! Thank you for helping with data collection!</string>
-    <string name="bluetoothFail">There was a problem sending your data... It\'s probably our fault, but please check your Bluetooth connection and try again!</string>
-    <string name="title_activity_success">Success</string>
-
-    <string name="dummy_content">Yummy\nCONTENT</string>
-
-    <string name="submitted">You did the thing!</string>
+    <!--Strings for SubmittedActivity-->
+    <string name="next">New Entry</string>
 </resources>
