Added Auto Goal GUI*
*currently does not function and has alignment issues, will fix tomorrow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,13 @@
     <string name="taxiOffText">Robot did not taxi</string>
     <string name="scoreTXT">Score</string>
     <string name="comments">Comments... Lorsem ipsum dolar sit amet</string>
-    <string name="autoGroupLabelText">Goal attempts in auto</string>
-    <string name="teleopGroupLabelText">Goal attempts in teleop</string>
+    <string name="autoGroupLabelText">Autonomous</string>
+    <string name="teleopGroupLabelText">Teleop</string>
+    <string name="autoHighMakeText">Successful Attempts</string>
+    <string name="autoHighMissText">Misses</string>
+    <string name="autoLowMakeText">Successful Attempts</string>
+    <string name="autoLowMissText">Misses</string>
+
 
     <!--Strings for SubmittedActivity-->
     <string name="next">New Entry</string>
