Fragment still does not work, taking break for now
I will be working on fixing Auto on the main branch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
         Welcome to Saber Metrics!
         \n\n
         This app was developed by Nathan and Dominic to send scouting data to our SQL database over Bluetooth.
-        If at any point while using the app you have a question feel free to contact me.
+        If at any point while using the app you have a question feel free to contact one of us.
         \n\n
         We hope that the robotics 2022 season is going well for you guys and that you all have a great time at competition!
         \n\n
