-Dominic- Changed GUI to accommodate a multi-line comments text box
yeh...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,12 @@
     <string name="Welcome_Message">
         Welcome to Saber-Metrics!
         \n\n
-        This app was developed by me (Nathan) to send scouting data to our SQL database over Bluetooth.
+        This app was developed by Dominic and Nathan to send scouting data to our SQL database over Bluetooth.
         If at any point while using the app you have a question feel free to contact me.
         \n\n
-        I genuinely hope that the FIRST robotics 2022 season goes well for you all and that you all have a great time at competition!
+        I genuinely hope that the Robo 2022 season goes well and that we all have a great time at competition!
         \n\n
-        Tap \"Let\'s Go!\" bellow to start entering data!
+        Tap \"Let\'s Go!\" below to start entering data!
     </string>
     <string name="Lets_Go">Let\'s Go</string>
 
@@ -28,7 +28,7 @@
     <string name="taxiOnText">Robot did taxi</string>
     <string name="taxiOffText">Robot did not taxi</string>
     <string name="scoreTXT">Score</string>
-    <string name="comments">Comments… Lorsem ipsum dolar sit amet</string>
+    <string name="comments">Enter comments about the match, the robot etc.</string>
     <string name="autoGroupLabelText">Autonomous</string>
     <string name="teleopGroupLabelText">Teleop</string>
     <string name="autoHighMakeText">Successful Attempts</string>
@@ -41,7 +41,7 @@
     <string name="low_goal">Low Goal</string>
     <string name="Inc_Button">+</string>
     <string name="telop_misses">0 misses</string>
-    <string name="game_result">Game result:</string>
+    <string name="game_result">Game\nresult:</string>
     <string name="climb_level">Climb level:</string>
     <string name="dec_Button">-</string>
     <string name="defense_plays">Defense Plays:</string>
